--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+
+body {
+    background: linear-gradient(to bottom right, #2CE1EE, #0A1561);
+    background-size:contain;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.display{
+    width: 20vw;
+    margin: 50px auto;
+    flex-wrap: wrap;
+    background-color:#bbd0ff;
+    padding: 30px;
+    border-radius: 12%;
+
+}
+.screen {
+    padding: 1rem;
+    width: 74%;
+    margin: 10% auto 10% auto;
+    height: 15px;
+    border: none;
+    border-radius: 10px;
+    background-color: #edf2f4;
+    box-shadow: 3px 3px 2px #999;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn {
+    margin-top: 10px;
+    padding: 8px 12px;
+    margin-left: 10px;
+    font-size: 1rem;
+    width:2.5rem;
+    border: none;
+    border-radius: 0.8rem;
+    color: #253443;
+    text-align: center;
+    box-shadow: 3px 3px 2px #999;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn:active {
+    transform: translateY(0.2em);
 }
-
-.App-link {
-  color: #61dafb;
+@media (max-width: 999px) {
+    .display {
+        width: 25vw;
+    }
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (max-width: 799px) {
+    .display {
+        width: 30vw;
+    }
+}
+@media (max-width: 665px) {
+    .display {
+        width: 35vw;
+    }
+}
+@media (max-width: 500px) {
+    .display {
+        width: 50vw;
+    }
+}
+@media (max-width: 375px) {
+    .display {
+        width: 55vw;
+    }
 }
